--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MG</title>
   </head>
-  <body>
-    <div id="app"></div>
+  <body class="container">
+    <div id="app">
+      
+    </div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
