--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MG</title>
   </head>
-  <body class="container">
+  <body class="container bg-black">
     <div id="app">
-      
+       
     </div>
     <script type="module" src="/src/main.js"></script>
   </body>
